name:              clearingstelle
version:           3.0.0
license:           BSD3
license-file:      LICENSE
author:            Markus Barenhoff
maintainer:        alios@alios.org
synopsis:          A secure token clearing server
description:       The greatest Yesod web application ever.
category:          Web
stability:         Stable
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://github.com/alios/clearingstelle

Flag production
    Description:   Build the production executable.
    Default:       False

executable         clearingstelle
    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded

    main-is:       ClearingstelleMain.hs

    build-depends: base         >= 4       && < 5
                 , yesod >= 0.8            && < 0.9
                 , yesod-core   >= 0.8     && < 0.9
                 , yesod-static
                 , persistent >= 0.5
                 , persistent-template >= 0.5
                 , persistent-sqlite
                 , wai-extra
                 , directory
                 , bytestring
                 , text
                 , template-haskell
                 , hamlet
                 , web-routes
                 , transformers
                 , applicative-extras
                 , wai
                 , warp
                 , random
                 , time
                 , blaze-builder
    ghc-options:   -Wall -threaded
