name:              clearingstelle
version:           3.1.1
license:           BSD3
license-file:      LICENSE
author:            Markus Barenhoff <alios@alios.org>
maintainer:        Markus Barenhoff <alios@alios.org>
synopsis:          The clearingstelle of the pirateparty
description:       The clearingstelle of the pirateparty
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://github.com/alios/clearingstelle

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Model.Keys
                     Settings
                     Settings.StaticFiles
                     Handler.Root
                     Handler.Clearingstelle

    ghc-options:   -Wall -threaded -O0

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts

executable         clearingstelle
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded -O0

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 0.9.3.4    && < 0.10
                 , yesod-core                    >= 0.9.3      && < 0.10
                 , yesod-auth                    >= 0.7.3      && < 0.8
                 , yesod-static                  >= 0.3.1      && < 0.4
                 , yesod-default                 >= 0.4        && < 0.5
                 , yesod-form                    >= 0.3.4      && < 0.4
                 , mime-mail                     >= 0.4        && < 0.5
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 0.6.2      && < 0.7
                 , persistent-postgresql     >= 0.6        && < 0.7
                 , template-haskell
                 , hamlet                        >= 0.10       && < 0.11
                 , shakespeare-css               >= 0.10       && < 0.11
                 , shakespeare-js                >= 0.10       && < 0.11
                 , shakespeare-text              >= 0.10       && < 0.11
                 , hjsmin                        >= 0.0.14     && < 0.1
                 , monad-control                 == 0.3.*
                 , random
                 , split                         >= 0.1.4      && < 0.1.5
                 , parsec                        >= 3.1        && < 3.2
                 , transformers                  >= 0.2        && < 0.3
                 , time                          >= 1.2        && < 1.3
